--- a/src/pages/table/table.scss
+++ b/src/pages/table/table.scss
@@ -1,3 +1,21 @@
 page-table {
-
+    table {
+        border: 1px solid black;
+        border-spacing: 5px;
+        width:100%;
+        height:auto;
+        text-align: center;
+    }
+    th, td {
+        padding: 15px;
+        border-bottom: 1px solid #ddd;
+    }
+    th {
+        background-color: #4CAF50;
+        color: white;
+    }
+     tr:nth-child(even) {background-color: #f2f2f2;} 
+     div#table{
+        overflow-x:auto
+     }
 }
