--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -1,3 +1,17 @@
 page-main {
-
+.amaranthus{
+    .label{
+        font-weight: bolder; 
+    }
+    .name{
+        font-size: 130%;
+    }
+    .left{
+        float: left;
+    }
+    .right{
+        float:right;
+        color:rgb(206, 215, 250);
+    }
+}
 }
