--- a/src/pages/student-list/student-list.scss
+++ b/src/pages/student-list/student-list.scss
@@ -1,3 +1,11 @@
 page-student-list {
-
+    .amaranthus{
+        .label{
+            font-weight: bolder; 
+        }
+        .name{
+            font-size: 130%;
+        }
+    }
+    
 }
