--- a/src/pages/create/create.scss
+++ b/src/pages/create/create.scss
@@ -1,5 +1,23 @@
 page-create {
-     #form-icon{
-           color: red;
-       }
+    h6{
+        padding-left:5px;
+    }
+    #form-icon{
+        color: red;
+    }
+
+    .profile-image{
+        padding:15px;
+        background-color: #ffffff;
+        border-bottom-right-radius: 100%;
+        border-bottom-left-radius: 100%;
+    }
+    img {
+        width:150px;
+        height:150px;
+        border-radius: 100%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
