--- a/src/pages/student-profile/student-profile.scss
+++ b/src/pages/student-profile/student-profile.scss
@@ -1,3 +1,44 @@
 page-student-profile {
-
+    $fontSize: 105%;
+    .text{
+       font-size: $fontSize;
+       color:#ffffff;
+    }
+    .profile-content{
+        background-color:rgba(110, 209, 248, 0.788); 
+    }
+    .header{
+        font-size: $fontSize + 10%;
+        color:#000;
+        font-weight: bolder; 
+    }
+    .text.label{
+        font-weight: normal;
+    }
+    .text.bold{
+        font-weight: bolder; 
+    }
+    .id{
+        font-size: $fontSize + 50%;
+    }
+    
+    .text.center{
+        text-align: center;
+        padding:initial;
+    }
+    .profile-image{
+        padding-bottom:15px;
+        background-color: #ffffff;
+        border-bottom-right-radius: 100%;
+        border-bottom-left-radius: 100%;
+    }
+    img {
+        width:150px;
+        height:150px;
+        border-radius: 100%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding-bottom: 10px;
+    }
 }
