--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -13,5 +13,8 @@ page-main {
         float:right;
         color:rgb(141, 162, 247);
     }
+    .attended{
+        color:rgb(230, 164, 164);
+    }
 }
 }
