--- a/src/pages/create/create.scss
+++ b/src/pages/create/create.scss
@@ -20,4 +20,7 @@ page-create {
         margin-left: auto;
         margin-right: auto;
     }
+    #optional{
+        text-align: center;
+    }
 }
