--- a/src/pages/table/table.scss
+++ b/src/pages/table/table.scss
@@ -1,4 +1,7 @@
 page-table {
+    .exportColor{
+        color:#c4c4c4
+    }
     table {
         border: 1px solid black;
         border-spacing: 5px;
