--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -1,10 +1,10 @@
 page-settings {
-    span p{
+    span p {
         font-size: 12px;
     }
     #loader {
-        position: absolute;
-        left: 60%;
+        position: inherit;
+        left: 50%;
         top: 10%;
         z-index: 1;
         margin: -75px 0 0 -75px;
@@ -15,15 +15,33 @@ page-settings {
         height: 40px;
         -webkit-animation: spin 2s linear infinite;
         animation: spin 2s linear infinite;
-      }
-      
-      @-webkit-keyframes spin {
-        0% { -webkit-transform: rotate(0deg); }
-        100% { -webkit-transform: rotate(360deg); }
-      }
-      
-      @keyframes spin {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
-      }
+    }
+    @-webkit-keyframes spin {
+        0% {
+            -webkit-transform: rotate(0deg);
+        }
+        100% {
+            -webkit-transform: rotate(360deg);
+        }
+    }
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+    #not-loaded {
+        position: absolute;
+        left:25%;
+        top:15%;
+    }
+    @media only screen and (orientation:landscape) {
+      #not-loaded {
+        position: absolute;
+        left:40%;
+        top:20%;
+    }
+    }
 }
