left a message to tap the screen!

--- a/src/pages/student-list/student-list.scss
+++ b/src/pages/student-list/student-list.scss
@@ -7,5 +7,7 @@ page-student-list {
             font-size: 130%;
         }
     }
-    
+    .attended{
+        color:rgb(230, 164, 164);
+    }
 }
