--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -6,41 +6,41 @@ page-settings {
     span p {
         font-size: 12px;
     }
-    #loader {
-        position: absolute;
-        left: 65%;
-        top: 20%;
-        z-index: 1;
-        margin: -75px 0 0 -75px;
-        border: 9px solid #f3f3f3;
-        border-radius: 50%;
-        border-top: 9px solid #3498db;
-        width: 40px;
-        height: 40px;
-        -webkit-animation: spin 2s linear infinite;
-        animation: spin 2s linear infinite;
-    }
-    @-webkit-keyframes spin {
-        0% {
-            -webkit-transform: rotate(0deg);
-        }
-        100% {
-            -webkit-transform: rotate(360deg);
-        }
-    }
-    @keyframes spin {
-        0% {
-            transform: rotate(0deg);
-        }
-        100% {
-            transform: rotate(360deg);
-        }
-    }
+    // #loader {
+    //     position: absolute;
+    //     left: 65%;
+    //     top: 20%;
+    //     z-index: 1;
+    //     margin: -75px 0 0 -75px;
+    //     border: 9px solid #f3f3f3;
+    //     border-radius: 50%;
+    //     border-top: 9px solid #3498db;
+    //     width: 40px;
+    //     height: 40px;
+    //     -webkit-animation: spin 2s linear infinite;
+    //     animation: spin 2s linear infinite;
+    // }
+    // @-webkit-keyframes spin {
+    //     0% {
+    //         -webkit-transform: rotate(0deg);
+    //     }
+    //     100% {
+    //         -webkit-transform: rotate(360deg);
+    //     }
+    // }
+    // @keyframes spin {
+    //     0% {
+    //         transform: rotate(0deg);
+    //     }
+    //     100% {
+    //         transform: rotate(360deg);
+    //     }
+    // }
 
-    @media screen and (min-width: 600px) {
-        #loader {
-            left: 55%;
-            top: 20%;
-        }
-    }
+    // @media screen and (min-width: 600px) {
+    //     #loader {
+    //         left: 55%;
+    //         top: 20%;
+    //     }
+    // }
 }
