added controls to create event page

--- a/src/pages/create/create.scss
+++ b/src/pages/create/create.scss
@@ -3,7 +3,7 @@ page-create {
         padding-left:5px;
     }
     #form-icon{
-        color: red;
+        color: color($colors,primary);
     }
 
     .profile-image{
