--- a/src/pages/edit/edit.scss
+++ b/src/pages/edit/edit.scss
@@ -3,7 +3,7 @@ page-edit {
         padding-left:5px;
     }
     #form-icon{
-        color: red;
+        color: color($colors,primary);
     }
 
     .profile-image{
