--- a/src/pages/event-profile/event-profile.scss
+++ b/src/pages/event-profile/event-profile.scss
@@ -1,3 +1,13 @@
 page-event-profile {
-
+    .amaranthus{
+        .label{
+            font-weight: bolder; 
+        }
+        .name{
+            font-size: 130%;
+        }
+        .attended{
+            color:rgb(230, 164, 164);
+        }
+    }
 }
