--- a/src/pages/student-profile/student-profile.scss
+++ b/src/pages/student-profile/student-profile.scss
@@ -3,7 +3,14 @@ page-student-profile {
         color: #ffffff;
         margin-left: 2%;
     }
-    .id {}
+    ul {
+        list-style: none;
+        margin:0px;
+        padding:0px;
+    }
+    // #notes {
+    //     display: inline-flex;
+    // }
     .header {
         color: #000;
         font-weight: bolder;
