--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -24,18 +24,18 @@
         display: inline-block;
         padding: 15px;
     }
-    .weekdays li {
+    ul li {
         margin: 0;
         display: inline-block;
         width: 13.6%;
         text-align: center;
     }
-    .days li {
-        margin: 0;
-        display: inline-block;
-        width: 13.6%;
-        text-align: center;
-    }
+    // .days li {
+    //     margin: 0;
+    //     display: inline-block;
+    //     width: 13.6%;
+    //     text-align: center;
+    // }
     .active {
         background-color: red;
         color: white;
