--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -12,10 +12,10 @@
         padding-top: 15px;
     }
     #arrow-up{
-        background-image: url('../../assets/fonts/arrow-up-solid.svg');
+        background-image: url('../assets/flaticon/arrow-up-solid.svg');
     }
     #arrow-down{
-        background-image: url('../../assets/fonts/arrow-down-solid.svg');
+        background-image: url('../assets/flaticon/arrow-down-solid.svg');
     }
     span {
         font-size: 30px;
