--- a/src/pages/student-profile/student-profile.scss
+++ b/src/pages/student-profile/student-profile.scss
@@ -21,7 +21,7 @@ page-student-profile {
     .text.label {
         font-weight: normal;
     }
-    .text.bold {
+    .bold {
         font-weight: bolder;
     }
     .text.center {
