--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -21,7 +21,14 @@ $app-direction: ltr;
 // to match your app's branding. Ionic uses a Sass map of
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
-$colors: ( primary: #e60000, secondary: #00b3b3, tertiary: #cc5200, danger: #ffd957, light: #f4f4f4, dark: #222);
+$colors: (
+  primary: #e60000,
+  secondary: #00b3b3,
+  tertiary: #cc5200,
+  danger: #ffd957,
+  light: #f4f4f4,
+  dark: #222
+);
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
